# bfi

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  bandit.yml  config.ini  features.py  improved-run.sh  inference.py  log4j.properties  main.py  pyproject.toml  requirements-dev.txt  run.sh  sonar-project.properties  train.py
src/: EMPLOIS_DAILY_HIST.py  RESS_DAILY_HIST.py  SLDCLI_NATURE_DAILY_DEVISES.py  compte_tenu_v1.py  constants.py  dim_Level0.py  dim_Level1.py  dim_Level3.py  dim_agence.py  dim_compte_.py  dim_type_ress_emp.py  explode_dataframe.py  taux_change_BAM_hist.py  transformations.py  utils.py
src/common/: table_loader.py  table_writer.py  utils.py
src/job/: activite_client.py  assurance.py  audit.py  bfi.py  bfi_monthly.py  bfis.py  carte.py  compte.py  contrat_produit.py  credit.py  csc.py  decouvert.py  digital.py  digital_retail.py  encours_assurance.py  engagement.py  equipement.py  fdc.py  fdcs.py  ingestion_assurance.py  ingestion_wafasalaf_pret.py  intensite_bancaire.py  intensite_bancaire_palier1.py  intensite_bancaire_palier2.py  intensite_bancaire_palier3.py  intensite_bancaire_palier4.py  kpi_client.py  monetique.py  objectif_fdc.py  ods.py  opcvm.py  package.py  pilotage_commercial.py  prelevement.py  produit.py  tiers.py
src/transformation/: activite_client.py  assurance.py  audit.py  bfi.py  bfis.py  carte.py  common.py  compte.py  contrat_produit.py  credit.py  csc.py  decouvert.py  digital.py  digital_retail.py  encours_assurance.py  engagement.py  equipement.py  fdc.py  fdcs.py  ingestion_assurance.py  ingestion_wafasalaf_pret.py  intensite_bancaire.py  intensite_bancaire_palier1.py  intensite_bancaire_palier2.py  intensite_bancaire_palier3.py  intensite_bancaire_palier4.py  kpi_client.py  monetique.py  objectif_fdc.py  ods.py  opcvm.py  package.py  pilotage_commercial.py  prelevement.py  produit.py  tiers.py
tests/: conftest.py  test_transformations.py  test_utils.py
tests/common/: test_table_loader.py  test_utils.py
tests/transformation/: test_activite_client.py  test_bfi.py  test_carte.py  test_common.py  test_csc.py  test_digital.py  test_engagement.py  test_equipement.py  test_ingestion_wafasalaf_pret.py  test_monetique.py  test_ods.py  test_prelevement.py
