[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
/)
'''

[tool.taskipy.tasks]
format = "black . && isort ."
type = "mypy -p src --strict-optional"
flake8 = "flake8 --append-config .flake8 src/* tests/*"
bandit = "bandit -c bandit.yml -r src/ tests/"
all = "autoflake --recursive --in-place --remove-all-unused-imports --remove-unused-variables . && task format && task type && task flake8"
pre = "pre-commit run --all-files"
requirements = "poetry export --without-hashes -f requirements.txt --output requirements.txt && poetry export --dev --without-hashes -f requirements.txt --output requirements-dev.txt"
cov = "coverage report -m --precision=2"
test = "pytest --cov=src --cov-report=xml -p no:warnings -v tests"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py", "inference.py", "train.py", "features.py", "src/explode_dataframe.py"]

[tool.coverage.report]
fail_under = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.poetry]
name = "cdm-bfi"
version = "0.1.0"
description = ""
authors = ["Ayoub LABYAD <ayoublabiad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
taskipy = "^1.10.1"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-isort = "^4.1.1"
pre-commit = "^2.18.1"
autoflake = "^1.4"
pyspark = "3.3.4"
pytest = "^7.1.1"
pandas = "2.0.3"
findspark = "^2.0.1"
notebook = "^6.4.12"
pytest-cov = "^3.0.0"
coverage = {extras = ["toml"], version = "^6.4.4"}
pytest-mock = "^3.8.2"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
