[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
/)
'''

[tool.poe.tasks]
ruff = "ruff check src/ tests/ --fix"
format = "ruff format src/ tests/"
mypy = "mypy src/ tests/ *.py --explicit-package-bases --namespace-packages --check-untyped-defs"
black = "black src/ tests/ *.py"
test = "pytest -v -s tests/"
cov = "coverage run --source=src -m pytest -v -s tests/"
report = "coverage report -m"
requirements = "poetry export --without-hashes -f requirements.txt --output requirements.txt"
requirements-dev = "poetry export --with dev --without-hashes -f requirements.txt --output requirements-dev.txt"
covtest = ["cov", "report"]
all = ["ruff", "format", "mypy"]

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80

[tool.poetry]
name = "cdm-datalake"
version = "0.1.0"
description = ""
authors = ["Ayoub Labiad <ayoub.labiadexterne@cdm.ma>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.26.1"
ruff = "^0.6.9"
black = "^22.3.0"
mypy = "^0.942"
pre-commit = "^2.18.1"
pyspark = "3.3.4"
pytest = "^7.1.1"
pandas = "2.0.3"
findspark = "^2.0.1"
notebook = "^6.4.12"
pytest-cov = "^3.0.0"
coverage = { extras = ["toml"], version = "^6.4.4" }
pytest-mock = "^3.8.2"
pandas-stubs = "2.0.3.230814"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E402"]
lint.fixable = ["ALL"]
target-version = "py38"
line-length = 85
lint.extend-select = ["I"]

[[tool.mypy.overrides]]
module = ["findspark"]
ignore_missing_imports = true

[[tool.poetry.source]]
name = "nexus"
url = "https://nexus-infra.cdm.co.ma/repository/pypi/simple"
priority = "primary"